--- a/core/html/design.less
+++ b/core/html/design.less
@@ -521,7 +521,7 @@ margin-left: @line-height-detail-inner;
 
 // Racer Registration
 
-#raceredit_racer{
+#raceredit_racer, #parceledit_parcel{
     .top_content_wrapper.registration{
     height: @line-height-edit;
     .top_info_wrapper{
